[gd_scene load_steps=6 format=3 uid="uid://dhrg7m7sgqb3x"]

[ext_resource type="Script" path="res://scenes/game/ui/high_score_entry_submit.gd" id="1_7btmo"]
[ext_resource type="StyleBox" uid="uid://bbkeu82rou51x" path="res://scenes/game/ui/hidden.tres" id="2_i338k"]
[ext_resource type="StyleBox" uid="uid://c7gu1ssuvhxc8" path="res://scenes/game/ui/button-stylebox.tres" id="2_u8so1"]
[ext_resource type="StyleBox" uid="uid://biflp58s1tmrx" path="res://scenes/game/ui/button-stylebox-hover.tres" id="3_bjk0u"]
[ext_resource type="StyleBox" uid="uid://dopj44xrked6g" path="res://scenes/game/ui/button-stylebox-pressed.tres" id="4_adfqw"]

[node name="HighScoreEntrySubmit" type="HBoxContainer"]
size_flags_horizontal = 4
theme_override_constants/separation = 46
script = ExtResource("1_7btmo")

[node name="DisabledSpacingButton" type="Button" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/normal = ExtResource("2_i338k")
theme_override_styles/hover = ExtResource("2_i338k")
theme_override_styles/pressed = ExtResource("2_i338k")
text = "Submit"

[node name="RankLabel" type="Label" parent="."]
custom_minimum_size = Vector2(28, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.956863, 0.956863, 1)
theme_override_styles/normal = ExtResource("2_u8so1")
text = "10"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(484, 40)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_u8so1")
placeholder_text = "Enter your name"

[node name="ScoreLabel" type="Label" parent="."]
custom_minimum_size = Vector2(184, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.956863, 0.956863, 1)
theme_override_styles/normal = ExtResource("2_u8so1")
text = "13 ft 17 in / 2342 cm  "
horizontal_alignment = 2
vertical_alignment = 1

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_u8so1")
theme_override_styles/hover = ExtResource("3_bjk0u")
theme_override_styles/pressed = ExtResource("4_adfqw")
text = "Submit"
